Add some selenium tests.

--- a/src/main/resources/templates/rent.html
+++ b/src/main/resources/templates/rent.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body BACKGROUND="image/merc.png">
-<H1>strona DO WYNAJMU!!!!!!!!!!!!!!!!!</H1>
+<body background="image/merc.png">
+<H1>Strona do wynajmu w budowie!</H1>
 </body>
 </html>
